fix dark mode

--- a/frontend-beeyond/app/src/app/core/side-navigation/side-navigation.component.scss
+++ b/frontend-beeyond/app/src/app/core/side-navigation/side-navigation.component.scss
@@ -29,7 +29,6 @@ mat-list-item:hover {
   font-size: 22px;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
-  background-color: mat-color($beeyond-light-accent, darker);
 }
 
 #icon {
